--- a/admin.html
+++ b/admin.html
@@ -802,6 +802,37 @@
 
                 <!-- Analysis/Status -->
                 <div>
+                    <!-- AI SECTION -->
+                    <div id="ai-analysis-section"
+                        style="background: linear-gradient(135deg, #eff6ff, #f0f9ff); border: 1px solid #bfdbfe; border-radius: 8px; padding: 15px; margin-bottom: 20px;">
+                        <h5
+                            style="margin: 0 0 10px 0; font-size: 13px; color: #1e40af; display:flex; align-items:center; gap:6px;">
+                            <span>🤖</span> AI THREAT ANALYSIS
+                        </h5>
+
+                        <div id="ai-loading" style="display:none; color:#60a5fa; font-size:13px; font-style:italic;">
+                            Scanning URL patterns with threat intelligence...
+                        </div>
+
+                        <div id="ai-result-container" style="display:none;">
+                            <div
+                                style="display:flex; justify-content:space-between; align-items:center; margin-bottom:10px;">
+                                <span id="ai-badge" class="badge" style="background:#cbd5e1; color:#334155;">NOT
+                                    SCANNED</span>
+                                <span id="ai-score" style="font-weight:700; font-size:14px; color:#64748b;">Risk Score:
+                                    --/100</span>
+                            </div>
+                            <p id="ai-reason" style="font-size:13px; color:#334155; margin:0; line-height:1.4;">
+                                No analysis data available. Run verify to check this URL.
+                            </p>
+                        </div>
+
+                        <div id="ai-action-container" style="margin-top:10px; display:none;">
+                            <button id="btn-run-ai" class="btn btn-sm" style="background:#2563eb; width:100%;">⚡ Run AI
+                                Verification</button>
+                        </div>
+                    </div>
+
                     <label
                         style="font-size:11px; color:#6c757d; font-weight:700; text-transform:uppercase; letter-spacing:0.5px;">Current
                         Status</label>
@@ -835,25 +866,7 @@
 
     <script src="js/auth.js"></script>
     <script src="js/admin.js"></script>
-    <script>
-        // Add logout functionality
-        document.addEventListener('DOMContentLoaded', () => {
-            const userPanel = document.querySelector('.user-panel');
-            if (userPanel && !document.getElementById('admin-logout-btn')) {
-                const logoutBtn = document.createElement('button');
-                logoutBtn.id = 'admin-logout-btn';
-                logoutBtn.textContent = 'Logout';
-                logoutBtn.style.cssText = 'margin-top: 10px; width: 100%; padding: 8px; background: #dc3545; color: white; border: none; border-radius: 6px; cursor: pointer; font-weight: 600;';
-                logoutBtn.onclick = () => {
-                    chrome.storage.local.remove(['adminToken', 'adminTokenExpiry', 'adminUser'], () => {
-                        const adminLoginUrl = chrome.runtime?.getURL ? chrome.runtime.getURL('admin-login.html') : 'admin-login.html';
-                        window.location.href = adminLoginUrl;
-                    });
-                };
-                userPanel.appendChild(logoutBtn);
-            }
-        });
-    </script>
+
 </body>
 
 </html>
