--- a/admin.html
+++ b/admin.html
@@ -467,6 +467,239 @@
                 transform: rotate(360deg);
             }
         }
+
+        /* ============================================ */
+        /* AI ANALYSIS ANIMATIONS */
+        /* ============================================ */
+
+        /* AI Scanning Animation */
+        .ai-scanning {
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 25%, #f093fb 50%, #4facfe 75%, #00f2fe 100%) !important;
+            background-size: 400% 400% !important;
+            animation: aiGradient 3s ease infinite, aiPulse 2s ease-in-out infinite !important;
+            border: 2px solid rgba(255, 255, 255, 0.3) !important;
+            box-shadow: 0 0 20px rgba(102, 126, 234, 0.4), 0 0 40px rgba(118, 75, 162, 0.2) !important;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .ai-scanning::before {
+            content: '';
+            position: absolute;
+            top: -50%;
+            left: -50%;
+            width: 200%;
+            height: 200%;
+            background: linear-gradient(45deg,
+                    transparent 30%,
+                    rgba(255, 255, 255, 0.1) 50%,
+                    transparent 70%);
+            animation: aiScan 2s linear infinite;
+        }
+
+        .ai-scanning h5,
+        .ai-scanning div {
+            color: white !important;
+            text-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+            position: relative;
+            z-index: 1;
+        }
+
+        @keyframes aiGradient {
+            0% {
+                background-position: 0% 50%;
+            }
+
+            50% {
+                background-position: 100% 50%;
+            }
+
+            100% {
+                background-position: 0% 50%;
+            }
+        }
+
+        @keyframes aiPulse {
+
+            0%,
+            100% {
+                transform: scale(1);
+                box-shadow: 0 0 20px rgba(102, 126, 234, 0.4), 0 0 40px rgba(118, 75, 162, 0.2);
+            }
+
+            50% {
+                transform: scale(1.02);
+                box-shadow: 0 0 30px rgba(102, 126, 234, 0.6), 0 0 60px rgba(118, 75, 162, 0.4);
+            }
+        }
+
+        @keyframes aiScan {
+            0% {
+                transform: translateX(-100%) translateY(-100%) rotate(45deg);
+            }
+
+            100% {
+                transform: translateX(100%) translateY(100%) rotate(45deg);
+            }
+        }
+
+        /* AI Loading Dots */
+        .ai-loading-dots {
+            display: inline-flex;
+            align-items: center;
+            gap: 4px;
+            font-weight: 600;
+            color: white;
+        }
+
+        .ai-loading-dots::after {
+            content: '';
+            display: inline-block;
+            width: 4px;
+            height: 4px;
+            border-radius: 50%;
+            background: white;
+            animation: aiDots 1.4s infinite;
+        }
+
+        @keyframes aiDots {
+
+            0%,
+            20% {
+                box-shadow: 0 0 0 white, 8px 0 0 white, 16px 0 0 white;
+            }
+
+            40% {
+                box-shadow: 0 0 0 white, 8px 0 0 white, 16px 0 0 rgba(255, 255, 255, 0.3);
+            }
+
+            60% {
+                box-shadow: 0 0 0 white, 8px 0 0 rgba(255, 255, 255, 0.3), 16px 0 0 rgba(255, 255, 255, 0.3);
+            }
+
+            80%,
+            100% {
+                box-shadow: 0 0 0 rgba(255, 255, 255, 0.3), 8px 0 0 rgba(255, 255, 255, 0.3), 16px 0 0 rgba(255, 255, 255, 0.3);
+            }
+        }
+
+        /* AI Brain Icon Animation */
+        .ai-brain-icon {
+            display: inline-block;
+            animation: aiBrain 2s ease-in-out infinite;
+            filter: drop-shadow(0 0 8px rgba(255, 255, 255, 0.6));
+        }
+
+        @keyframes aiBrain {
+
+            0%,
+            100% {
+                transform: scale(1) rotate(0deg);
+            }
+
+            25% {
+                transform: scale(1.1) rotate(-5deg);
+            }
+
+            75% {
+                transform: scale(1.1) rotate(5deg);
+            }
+        }
+
+        /* AI Result Success Animation */
+        .ai-result-success {
+            animation: aiResultFadeIn 0.6s ease-out;
+        }
+
+        @keyframes aiResultFadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(-10px) scale(0.95);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0) scale(1);
+            }
+        }
+
+        /* Holographic Text Effect */
+        .holographic-text {
+            background: linear-gradient(90deg, #667eea, #764ba2, #f093fb, #4facfe);
+            background-size: 200% auto;
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            animation: holoShift 3s linear infinite;
+            font-weight: 700;
+        }
+
+        @keyframes holoShift {
+            0% {
+                background-position: 0% center;
+            }
+
+            100% {
+                background-position: 200% center;
+            }
+        }
+
+        /* AI Processing Indicator */
+        .ai-processing {
+            position: relative;
+            padding-left: 30px;
+        }
+
+        .ai-processing::before {
+            content: '⚡';
+            position: absolute;
+            left: 0;
+            animation: aiZap 0.8s ease-in-out infinite;
+        }
+
+        @keyframes aiZap {
+
+            0%,
+            100% {
+                opacity: 1;
+                transform: scale(1);
+            }
+
+            50% {
+                opacity: 0.5;
+                transform: scale(1.3);
+            }
+        }
+
+        /* Shimmer Effect for AI Button */
+        .btn-ai-shimmer {
+            position: relative;
+            overflow: hidden;
+        }
+
+        .btn-ai-shimmer::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(90deg,
+                    transparent,
+                    rgba(255, 255, 255, 0.3),
+                    transparent);
+            animation: shimmer 2s infinite;
+        }
+
+        @keyframes shimmer {
+            0% {
+                left: -100%;
+            }
+
+            100% {
+                left: 100%;
+            }
+        }
     </style>
 </head>
 
@@ -616,7 +849,8 @@
                 <div class="section-header">
                     <h3>CrowdShield - Reported Phishing Sites</h3>
                     <button class="btn btn-outline" id="btn-refresh-reports">Refresh List</button>
-                    <button class="btn btn-outline" id="btn-delete-all-reports" style="color: #dc3545; border-color: #dc3545; margin-left: 10px;">Delete All</button>
+                    <button class="btn btn-outline" id="btn-delete-all-reports"
+                        style="color: #dc3545; border-color: #dc3545; margin-left: 10px;">Delete All</button>
                 </div>
                 <p style="margin-bottom:20px; color:#6c757d;">User-submitted reports. Verify and ban malicious domains.
                 </p>
